Fixing an issue on mobile display

--- a/src/Components/Button/Button.scss
+++ b/src/Components/Button/Button.scss
@@ -29,6 +29,7 @@
 
 @media screen and (max-width: 600px) {
   .btn {
-    max-width: 80%;
+    width: 80%;
+    margin: 10px auto;
   }
 }
