--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -5,10 +5,12 @@
   padding: 20px 30px;
   background: #50c3d5;
   color: white;
+  width: 100vw;
 
   .nav-logo {
     font-size: 18px;
     font-weight: 500;
+    padding-left: 5px;
   }
 
   .nav-actions {
@@ -16,6 +18,7 @@
     flex-direction: row;
     align-self: flex-end;
     margin-left: auto;
+    padding-right: 5px;
 
     h2 {
       margin: 0 10px;
@@ -30,5 +33,11 @@
         transition: all 0.2s ease-in-out;
       }
     }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .nav {
+    padding: 20px 5px;
   }
 }
