--- a/src/Components/SingleProduct/SingleProduct.scss
+++ b/src/Components/SingleProduct/SingleProduct.scss
@@ -2,11 +2,10 @@
   position: relative;
   display: flex;
   flex-direction: row;
-  margin: 20px;
+  margin: 10px;
   margin-bottom: 40px;
   padding: 15px;
   min-width: 230px;
-  max-height: 110px;
   transition: all 0.2s ease-in-out;
 
   .product-image {
