--- a/src/Pages/ProductsPage/ProductsPage.scss
+++ b/src/Pages/ProductsPage/ProductsPage.scss
@@ -2,13 +2,13 @@
   padding: 50px;
   display: flex;
   flex-direction: row;
-  width: 100%;
+  width: 100vw;
+  overflow: hidden;
 
   .categories-column,
   .products-section {
     display: flex;
     flex-direction: column;
-    margin: 0px 20px;
   }
 
   .categories-column {
@@ -22,13 +22,23 @@
   }
 }
 
+@media screen and (max-width: 1200px) {
+  .container {
+    padding: 20px;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .container {
     display: flex;
     flex-direction: column;
+    padding: 0;
+    width: 100vw;
+    overflow: hidden;
 
     .categories-column {
       height: auto;
+      padding: 10px;
       padding-bottom: 30px;
 
       .categories {
@@ -37,7 +47,7 @@
         flex-wrap: wrap;
         align-items: center;
         justify-content: center;
-        width: 90%;
+        //width: 90%;
       }
     }
   }
